[package]
name = "saphire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xcb = "*"
# xcb-util = { version = "*", features = ["cursor", "ewmh"] }
# xcb = { version = "0.10.1" }
xcb-util = { version = "0.4.0", features = ["cursor", "ewmh", "keysyms"] }
