[package]
name = "saphire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyn-clone = "1.0.16"
x11 = { version = "*", features = ["xlib"] }
xcb = "*"
xcb-util = { version = "0.4.0", features = ["cursor", "ewmh", "keysyms", "icccm"] }
